# drivescore-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_role_to_users.py
app/: auth.py  config.py  crud.py  database.py  koap_catalogue.py  main.py  models.py  schemas.py  scoring.py  security.py  seed.py
app/routers/: auth_router.py  dashboard_router.py  drivers_router.py  import_router.py  simulate_router.py  users_router.py  violations_router.py
docs/samples/: 01_happy_comma.csv  02_happy_semicolon.csv  03_mixed_errors.csv  04_recurrence_one_driver.csv  05_critical_dui.csv  06_excel_ru_with_bom.csv  README.md
tests/: conftest.py  test_auth_api.py  test_auth_unit.py  test_config.py  test_dashboard_api.py  test_drivers_api.py  test_import_api.py  test_models.py  test_scoring.py  test_seed.py  test_simulate_api.py  test_users_api.py
